# smartcard

./: .gitignore  CMakeLists.txt  README.md  aesMath_8h_source.html  aes_8h_source.html  annotated.html  classAES-members.html  classAES.html  classAESMath-members.html  classAESMath.html  classAESMath__coll__graph.map  classAESMath__coll__graph.md5  classAES__coll__graph.map  classAES__coll__graph.md5  classCommunication-members.html  classCommunication.html  classCommunication_1_1IOPin-members.html  classCommunication_1_1IOPin.html  classCommunication_1_1IOPin__coll__graph.map  classCommunication_1_1IOPin__coll__graph.md5  classCommunication_1_1Timer-members.html  classCommunication_1_1Timer.html  classCommunication_1_1Timer__coll__graph.map  classCommunication_1_1Timer__coll__graph.md5  classCommunication__coll__graph.map  classCommunication__coll__graph.md5  classHiding-members.html  classHiding.html  classHiding__coll__graph.map  classHiding__coll__graph.md5  classLogger-members.html  classLogger.html  classLogger__coll__graph.map  classLogger__coll__graph.md5  classMasking-members.html  classMasking.html  classMasking__coll__graph.map  classMasking__coll__graph.md5  classRNG-members.html  classRNG.html  (+32 more)
.github/workflows/: build.yml  cmake.yml  codeql-analysis.yml  deploy-pages.yml  msvc.yml
docs/: CMakeLists.txt  Doxyfile  mainpage.md
include/: communication.h  defs.h  logger.h  protocol.h
include/aes/: aes.h  aesMath.h  hiding.h  lut.h  masking.h  rng.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  (+13 more)
src/: communication.cpp  logger.cpp  main.cpp
src/aes/: aes.cpp  aesMath.cpp  hiding.cpp  masking.cpp  rng.cpp
